fix(a11y): increase contrast in various places

--- a/frappe/public/scss/desk/list.scss
+++ b/frappe/public/scss/desk/list.scss
@@ -210,8 +210,8 @@ $level-margin-right: 8px;
 			border: 1px solid var(--dark-border-color);
 
 			&.btn-info {
-				background-color: var(--gray-400);
-				border-color: var(--gray-400);
+				background-color: var(--gray-600);
+				border-color: var(--gray-600);
 				color: var(--white);
 				font-weight: var(--text-bold);
 			}
@@ -412,7 +412,7 @@ input.list-check-all {
 	}
 
 	.filter-button.btn-primary-light {
-		color: var(--blue-500);
+		color: var(--text-on-blue);
 	}
 
 	.sort-selector {
